--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,9 @@
         <!-- Feeds -->
         {% if config.generate_feed %}<link rel="alternate" type={% if config.feed_filename == "atom.xml" %}"application/atom+xml"{% else %}"application/rss+xml"{% endif %} title="RSS" href="{{ get_url(path=config.feed_filename) | safe }}">{% endif %}
 
+        <!-- Extra things I want to insert -->
+        {% block extra_head %} {% endblock extra_head %}
+
         <!-- Google Analytics -->
         {% if config.extra.google_analytics.enabled %}<script async src="https://www.googletagmanager.com/gtag/js?id={{ config.extra.google_analytics.id }}"></script>
         <script>
